name:                stagen
version:             0.1.0.0
synopsis:            Codeless static site generator
-- description:         
homepage:            https://github.com/jxv/stagen
license:             BSD3
license-file:        LICENSE
author:              Joe Vargas
maintainer:          jxv@hush.com
copyright:           (c) 2015
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.18

executable stagen
  main-is:             Main.hs
  default-extensions:  OverloadedStrings
                       RecordWildCards
                       TupleSections
                       LambdaCase
  build-depends:       base >=4.7 && <4.8,
                       directory >=1.2 && <1.3,
                       markdown >=0.1 && <0.2,
                       blaze-html >=0.7 && <0.8,
                       text >=1.2 && <1.3,
                       data-default >=0.5 && <0.6,
                       optparse-applicative >=0.11 && <0.12,
                       filemanip >=0.3.6 && <0.4,
                       parallel >=3.2 && <3.3,
                       parsec >=3.1 && <3.2,
                       lucid >=2.9 && <2.10
  hs-source-dirs:      src
  default-language:    Haskell2010
